--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,12 @@
+{ 
+    "version": "2017-02-28",
+    "operation": "Scan",
+    "filter": #if($context.args.filter) $util.transform.toDynamoDBFilterExpression($ctx.args.filter) #else null #end,
+    "limit": #if($context.arguments.limit) $context.arguments.limit #else 10 #end,
+    "nextToken": #if($context.arguments.nextToken) "$context.arguments.nextToken" #else null #end
+}
+
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${file}"
-        }
-    ]
+    "items": $util.toJson($context.result.items),
+    "nextToken": $util.toJson($context.result.nextToken)
 }
