working locally fine

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,9 +1,8 @@
-FROM node:latest
-MAINTAINER Raj 
+FROM node:11-alpine
 ADD .  /
 #ADD server.sh  /server.sh
 #ADD index.js  /index.js
 WORKDIR /
 # RUN chmod 777 ./server.sh
-EXPOSE 8081
-CMD [ "/bin/bash", "server.sh" ]
+EXPOSE 81
+CMD [ "ash", "worker.sh" ]
