--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Logs
 logs
 *.log
+!workerlogs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -34,6 +35,7 @@ build/Release
 
 # Dependency directories
 node_modules/
+#!worker/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
