working with userid/function name as inputs

--- a/worker/node/template/worker.config
+++ b/worker/node/template/worker.config
@@ -1,1 +1,1 @@
-{"userid":"sund22","worker_platform":"node","function_name":"myfunc"}
+{"userid":"sund","worker_platform":"node","function_name":"myfunc"}
