--- a/worker/node/template/Dockerfile
+++ b/worker/node/template/Dockerfile
@@ -4,5 +4,6 @@ ADD .  /
 #ADD index.js  /index.js
 WORKDIR /
 # RUN chmod 777 ./server.sh
+RUN apk add bash
 EXPOSE 81
-CMD [ "ash"]
+CMD ["sh", "-c", "tail -f /dev/null"]
