work with better logs

--- a/k8s/DockerfileLambdaServer.txt
+++ b/k8s/DockerfileLambdaServer.txt
@@ -1,5 +1,5 @@
 FROM sundarigari/node.11-alpine.exp.redis.kctl:latest
 USER root
+RUN npm install winston-daily-rotate-file
 ADD .  /
-#CMD [ "ash", "-c", "node ./lambda_server.js"]
-CMD ["sh", "-c", "tail -f /dev/null"]
+CMD [ "ash", "-c", "node lambda_server.js"]
