--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,16 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        // {
+        //     "type": "node",
+        //     "request": "attach",
+        //     "name": "Docker: Attach to Node",
+        //     "port": 9229,
+        //     "address": "localhost",
+        //     "localRoot": "${workspaceFolder}",
+        //     "remoteRoot": "/",
+        //     "protocol": "inspector"
+        // }
         {
             "type": "node",
             "request": "launch",
