--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "debug file",
-            "type": "go",
-            "request": "launch",
-            "mode": "debug",
-            "program": "${file}"
-        }
+        // {
+        //     "name": "debug file",
+        //     "type": "go",
+        //     "request": "launch",
+        //     "mode": "debug",
+        //     "program": "${file}"
+        // }
         // {
         //     "type": "node",
         //     "request": "attach",
@@ -21,12 +21,12 @@
         //     "remoteRoot": "/",
         //     "protocol": "inspector"
         // }
-        // {
-        //     "type": "node",
-        //     "request": "launch",
-        //     "name": "Launch Program",
-        //     "outputCapture": "std",
-        //     "program": "${workspaceFolder}/lambda_server.js"
-        // }
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program",
+            "outputCapture": "std",
+            "program": "${workspaceFolder}/lambda_server.js"
+        }
     ]
 }
