--- a/k8s/pvc_lambserver.yaml
+++ b/k8s/pvc_lambserver.yaml
@@ -1,10 +1,22 @@
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv-vol2
+spec:
+  accessModes:
+    - ReadWriteMany
+  capacity:
+    storage: 2Gi
+  hostPath:
+    path: /temp/data
+---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: lambserver-volumeclaim
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 2Gi
